<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="9dip"
        android:layout_marginRight="9dip"
        android:layout_marginTop="9dip"
        android:adjustViewBounds="true"
        android:gravity="center"
        android:text="软件信息"
        android:textColor="#000"
        android:textSize="24sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/about_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="9dip"
        android:layout_marginRight="9dip"
        android:layout_marginTop="9dip"
        android:adjustViewBounds="true"
        android:gravity="center"
        android:text="@string/version"
        android:textColor="#000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dip"
        android:layout_marginLeft="9dip"
        android:layout_marginRight="9dip"
        android:layout_marginTop="5dip"
        android:adjustViewBounds="true"
        android:gravity="center"
        android:text="@string/copyright"
        android:textColor="#000" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:background="#34000000" />

    <Button
        android:id="@+id/ok"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dip"
        android:layout_marginTop="4dip"
        android:gravity="center"
        android:text="@string/ok"
        android:textSize="16sp" />

</LinearLayout>